8.ecs/modules/network/network.tf

variable "stack_name" {}
variable "vpc_id" {}

resource "aws_internet_gateway" "my_igw" {
  vpc_id = "${var.vpc_id}"

  tags = {
    Name = "tf-example-aws_aig"
  }
}


resource "aws_subnet" "my_subnet" {
  vpc_id            = "${var.vpc_id}"
  cidr_block        = "172.16.10.0/24"
  availability_zone = "us-west-2a"
  map_public_ip_on_launch = true

  tags = {
    Name = "tf-example-aws_subnet"
  }
}

resource "aws_network_interface" "network_interface" {
  subnet_id   = aws_subnet.my_subnet.id

  security_groups = ["${aws_security_group.ec2_security_group.id}"]

  tags = {
    Name = "tf-example-network_interface"
  }
}

resource "aws_route_table" "my_route_table" {
  vpc_id            = "${var.vpc_id}"
  depends_on = [ aws_internet_gateway.my_igw ]

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.my_igw.id}"
  }


  tags = {
    Name = "tf-example-route_table"
  }
}

resource "aws_route_table_association" "public_rt_associations" {
  subnet_id      = "${aws_subnet.my_subnet.id}"
  route_table_id = "${aws_route_table.my_route_table.id}"
}


################################
## Security group for EC2
################################

resource "aws_security_group" "ec2_security_group" {
  name   = "${var.stack_name}-ec2"
  vpc_id            = "${var.vpc_id}"

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 2376
    to_port     = 2376
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = -1
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.stack_name}"
  }
  
}
